data/derived/fa15/progs/unify/prog2645.ml.out
Characters 29-50:
  let fixpoint (f,b) = wwhile (((f b), (b == (f b))) ,b);;
                               ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
